--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@ body {
 }
 
 .App {
-  text-align: center;
   max-width: 728px;
   margin: 0 auto;
 }
@@ -110,10 +109,10 @@ button:disabled {
 
 
 
-ul, li {
-  text-align: left;
-  list-style: none;
-}
+/*ul, li {*/
+/*  text-align: left;*/
+/*  list-style: none;*/
+/*}*/
 
 p {
   max-width: 500px;
@@ -127,8 +126,7 @@ p {
 }
 
 .message {
-  display: flex;
-  align-items: center;
+  color: white;
 }
 
 
@@ -146,13 +144,6 @@ p {
   color: black;
 }
 
-img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 2px 5px;
-}
-
 .ai p {
   text-align: left;
 }
@@ -167,4 +158,8 @@ img {
 
 .what-to-cook {
   color: white;
+}
+
+.account-avatar {
+  cursor: pointer;
 }
